# middl

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
src/middl/: __init__.py
src/middl/core/: __init__.py  errors.py  loader.py  middleware.py  pipeline.py
src/middle/: __init__.py
tests/: test_loader.py  test_middleware.py  test_pipeline.py
