[project]
name = "middle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tadej Svetina", email = "tadej.svetina@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
